--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "fastify": "^4.24.3"
+    "fastify": "^4.24.3",
+    "opossum": "^9.0.0",
+    "smartystreets-javascript-sdk": "^7.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
+    "@types/opossum": "^8.1.9",
+    "@types/smartystreets-javascript-sdk": "^5.1.0",
     "tsx": "^4.6.0",
     "typescript": "^5.3.0"
   }
