Complete Task 5: Connect SmartyAddressProvider to API endpoint
- Add AddressValidationService to orchestrate validation workflow
- Replace mock response with real SmartyAddressProvider calls
- Add dotenv package and configuration loading
- Fix environment variable loading with 'dotenv/config' import
- Refactor callSmartyAPI to use async/await instead of Promise wrapper
- Add proper error handling and HTTP status codes

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^17.2.1",
     "fastify": "^4.24.3",
     "opossum": "^9.0.0",
     "smartystreets-javascript-sdk": "^7.0.1"
