--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "smartystreets-javascript-sdk": "^7.0.1"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.10.0",
     "@types/opossum": "^8.1.9",
     "@types/smartystreets-javascript-sdk": "^5.1.0",
+    "jest": "^30.0.5",
+    "ts-jest": "^29.4.0",
     "tsx": "^4.6.0",
     "typescript": "^5.3.0"
   }
