--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@fastify/helmet": "^13.0.1",
+    "@fastify/rate-limit": "^10.3.0",
     "dotenv": "^17.2.1",
-    "fastify": "^4.24.3",
+    "fastify": "^5.4.0",
     "opossum": "^9.0.0",
     "smartystreets-javascript-sdk": "^7.0.1"
   },
@@ -28,6 +30,7 @@
     "@types/opossum": "^8.1.9",
     "@types/smartystreets-javascript-sdk": "^5.1.0",
     "jest": "^30.0.5",
+    "pino-pretty": "^13.0.0",
     "ts-jest": "^29.4.0",
     "tsx": "^4.6.0",
     "typescript": "^5.3.0"
